8324337: Cherry-pick WebKit 617.1 stabilization fixes

Reviewed-by: kcr, sykora